# ent

./: .gitignore  CMakeLists.txt  main.c
.github/workflows/: cmake.yml
console/: CMakeLists.txt  console.c
console/include/: console.h
types/: CMakeLists.txt  types.c  types.h
types/container/: CMakeLists.txt  container.c  container.rapresentation
types/container/include/: container.h
types/event/: CMakeLists.txt  event.c  event.rapresentation
types/event/include/: event.h
types/object/: CMakeLists.txt  object.c  object.rapresentation
types/object/include/: object.h
window/: CMakeLists.txt  window.c  window.rapresentation
window/include/: window.h
